--- a/Esra.Web/Resources/GlobalConstants.resx
+++ b/Esra.Web/Resources/GlobalConstants.resx
@@ -119,23 +119,38 @@
   </resheader>
   <data name="ROLE_ADMIN" xml:space="preserve">
     <value>Admin</value>
+    <comment>Allows access to all features, including User Admin.  Includes access to title and salary scale maintenance.  Note: user must also have "ManageAll" role to actually be able to edit users within the user admin "plug-in".</comment>
   </data>
   <data name="ROLE_APPLICATION_MANAGER" xml:space="preserve">
     <value>ApplicationManager</value>
+    <comment>Reserved for future use.</comment>
   </data>
   <data name="ROLE_DO_USER" xml:space="preserve">
     <value>DOUser</value>
+    <comment>Allows access to all features except User Admin.  Includes access to title and salary scale maintenance.</comment>
   </data>
   <data name="ROLE_EMULATION_USER" xml:space="preserve">
     <value>EmulationUser</value>
+    <comment>Allows a user to emulate another user (for testing purposes, etc).</comment>
   </data>
   <data name="ROLE_MANAGE_ALL" xml:space="preserve">
     <value>ManageAll</value>
+    <comment>Allows user to "manage", i.e. edit catbert users via the user admin plug-in.  Needed in addition to "Admin" role.</comment>
+  </data>
+  <data name="ROLE_MANAGE_SCHOOL" xml:space="preserve">
+    <value>ManageSchool</value>
+    <comment>Allows user to "manage", i.e. edit catbert users within a particular school.  Needed in addition to the SchoolAdmin role.</comment>
   </data>
   <data name="ROLE_REVIEWER" xml:space="preserve">
     <value>Reviewer</value>
+    <comment>Allows access to "basic" features, i.e. Salary Scales, Employee Salary Comparison, and Employee Salary Review Analysis for all employees within their assigned college.</comment>
+  </data>
+  <data name="ROLE_SCHOOL_ADMIN" xml:space="preserve">
+    <value>SchoolAdmin</value>
+    <comment>Allows access to all features, including User Admin, but for a particular college/school.  Includes access to title and salary scale maintenance.  Note: user must also have "ManageSchool" role to actually be able to edit users within the user admin "plug-in".</comment>
   </data>
   <data name="ROLE_USER" xml:space="preserve">
     <value>User</value>
+    <comment>Departmental User: Same as rights as "Reviewer, except restricts users and departments displayed to only those they are authorized for, typically those within a user's department(s).  "Blanks" out employee specifics like name and department for those they are not (for purposes of salary comparison).</comment>
   </data>
 </root>
