Revised menu views and broke UserAdmin out into it's own separate controller.
Added demo capability.
Modified _Navigation to include link to UserAdmin (as appropriate).
Added "About" text. to About view.
Broke out EmulateUser into it's own partial _EmulateUser, and removed it from individual menu partial views.
Revised HomeController and added HomeViewModel and a repository.

--- a/Esra.Web/Resources/GlobalConstants.resx
+++ b/Esra.Web/Resources/GlobalConstants.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="MODE_DEMO" xml:space="preserve">
+    <value>demo</value>
+    <comment>Used to enable and initially show the Role/Demo feature.</comment>
+  </data>
   <data name="ROLE_ADMIN" xml:space="preserve">
     <value>Admin</value>
     <comment>Allows access to all features, including User Admin.  Includes access to title and salary scale maintenance.  Note: user must also have "ManageAll" role to actually be able to edit users within the user admin "plug-in".</comment>
